--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/duplexAscensores/starter-kit-lit-element.git"
+    "url": "git+ssh://git@github.com:danielbonus/babelFormation.git"
   },
   "husky": {
     "hooks": {
@@ -56,7 +56,7 @@
   },
   "author": "DanielBonus",
   "license": "ISC",
-  "homepage": "https://gitlab.com/duplexAscensores/starter-kit-lit-element/-/blob/master/README.md",
+  "homepage": "https://github.com/danielbonus/babelFormation/blob/master/README.md",
   "dependencies": {
     "@vaadin/router": "^1.7.2",
     "@webcomponents/webcomponentsjs": "^2.4.3",
